--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "url": "git@github.com:michelle-becker/node-ams-sdk.git"
   },
   "dependencies": {
-    "request": "^2.34.0"
+    "request": "^2.34.0",
+    "through": "^2.3.4"
   },
   "config": {
     "precommit": {
