--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "url": "git@github.com:michelle-becker/node-ams-sdk.git"
   },
   "dependencies": {
+    "moment": "^2.6.0",
     "request": "^2.34.0",
-    "through": "^2.3.4",
-    "moment": "^2.6.0"
+    "through": "^2.3.4"
   },
   "config": {
     "precommit": {
